--- a/skhd/.skhdrc
+++ b/skhd/.skhdrc
@@ -10,10 +10,10 @@ cmd - up    : yabai -m window --focus north
 cmd - right : yabai -m window --focus east
 
 # shift window in current workspace
-alt + shift - h : yabai -m window --swap west || $(yabai -m window --display west; yabai -m display --focus west)
-alt + shift - j : yabai -m window --swap south || $(yabai -m window --display south; yabai -m display --focus south)
-alt + shift - k : yabai -m window --swap north || $(yabai -m window --display north; yabai -m display --focus north)
-alt + shift - l : yabai -m window --swap east || $(yabai -m window --display east; yabai -m display --focus east)
+cmd + shift - h : yabai -m window --swap west || $(yabai -m window --display west; yabai -m display --focus west)
+cmd + shift - j : yabai -m window --swap south || $(yabai -m window --display south; yabai -m display --focus south)
+cmd + shift - k : yabai -m window --swap north || $(yabai -m window --display north; yabai -m display --focus north)
+cmd + shift - l : yabai -m window --swap east || $(yabai -m window --display east; yabai -m display --focus east)
 # alternatively, use the arrow keys
 cmd + shift - left : yabai -m window --swap west || $(yabai -m window --display west; yabai -m display --focus west)
 cmd + shift - down : yabai -m window --swap south || $(yabai -m window --display south; yabai -m display --focus south)
@@ -41,7 +41,7 @@ cmd + shift - 6 : yabai -m window --space 6
 cmd + shift - 7 : yabai -m window --space 7
 cmd + shift - 8 : yabai -m window --space 8
 cmd + shift - 9 : yabai -m window --space 9
-#alt + shift - 0 : yabai -m window --space 10
+cmd + shift - 0 : yabai -m window --space 10
 
 # mirror tree y-axis
 cmd + shift - y : yabai -m space --mirror y-axis
