--- a/i3/config
+++ b/i3/config
@@ -178,5 +178,6 @@ bindsym XF86MonBrightnessUp exec xbacklight -inc 10
 bindsym XF86MonBrightnessDown exec xbacklight -dec 10
 
 bindsym Print exec print-screen
+exec /usr/bin/pasystray
 exec "setxkbmap -layout us,bg\(phonetic\)"
 exec "setxkbmap -option 'grp:alt_shift_toggle'"
