--- a/ideavimrc/.ideavimrc
+++ b/ideavimrc/.ideavimrc
@@ -6,6 +6,9 @@ set textobj-indent
 
 let mapleader="\\"
 
+nnoremap <c-o> :action Back<cr>
+nnoremap <c-i> :action Forward<cr>
+
 nmap <Leader>rn :action RenameElement<CR>
 nmap <Leader>run :action RunClass<CR>
 nmap <Leader>ca :action ShowIntentionActions<CR>
