--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -42,5 +42,23 @@
             "command": "workbench.action.focusBelowGroup",
             "when": "editorTextFocus && vim.active && vim.mode != 'Insert'"
         }
-    ]
+    ],
+    "chat.agent.enabled": true,
+    "mcp": {
+        
+
+        "inputs": [],
+        "servers": {
+            "mcp-server-time": {
+                "command": "python",
+                "args": [
+                    "-m",
+                    "mcp_server_time",
+                    "--local-timezone=America/Los_Angeles"
+                ],
+                "env": {}
+            }
+        }
+    },
+    "chat.mcp.discovery.enabled": true
 }
